# skia

./: BUILD.gn  Doxyfile
docs/: SkCanvas_Reference.bmh  spelling.txt  usingBookmaker.bmh
experimental/canvaskit/fonts/: README.md
experimental/go-skia/: ctypes.go
gm/: illusion1.cpp  illusion2.cpp  illusion3.cpp  illusion4.cpp  illusion5.cpp  illusion6.cpp  illusion7.cpp  illusion8.cpp  illusion9.cpp
gn/: gm.gni  samples.gni  tests.gni
include/core/: SkFontTypes.h
infra/bots/: README.md
modules/skottie/src/: SkottieAdapter.cpp
modules/skparagraph/: BUILD.gn  skparagraph.gni
modules/skparagraph/include/: SkDartTypes.h  SkFontCollection.h  SkFontManager.h  SkFontProvider.h  SkParagraph.h  SkParagraphBuilder.h  SkParagraphStyle.h  SkShaped.h  SkTextShadow.h  SkTextStyle.h
modules/skparagraph/include/flutter/: SkDartTypes.h  SkFontCollection.h  SkParagraph.h  SkParagraphBuilder.h
modules/skparagraph/src/: Iterators.h  ParagraphCache.cpp  ParagraphImpl.cpp  ParagraphImpl.h  Run.cpp  Run.h  ShapedLine.h  ShapedParagraph.cpp  ShapedParagraph.h  ShapedRun.cpp  ShapedRun.h  SkArraySpan.h  SkBlock.cpp  SkBlock.h  SkFontCollection.cpp  SkFontIterator.cpp  SkFontIterator.h  SkFontManager.cpp  SkFontProvider.cpp  SkLine.cpp  SkLine.h  SkParagraph.cpp  SkParagraphBuilder.cpp  SkParagraphImpl.cpp  SkParagraphImpl.h  SkParagraphStyle.cpp  SkRun.cpp  SkRun.h  SkSection.cpp  SkSection.h  SkShaped.cpp  SkShapedLine.h  SkShapedParagraph.cpp  SkShapedParagraph.h  SkShapedRun.cpp  SkShapedRun.h  SkTextShadow.cpp  SkTextStyle.cpp  SkTextWrapper.cpp  SkTextWrapper.h  (+4 more)
modules/skparagraph/src/flutter/: SkFontCollection.cpp  SkParagraph.cpp  SkParagraphBuilder.cpp  SkTextShadow.cpp  SkTextStyle.cpp
modules/skparagraph/utils/: TestFontCollection.cpp
modules/skshaper/: BUILD.gn
modules/skshaper/include/: SkIterators.h  SkShaper.h
modules/skshaper/src/: SkIterators.cpp  SkShaper.cpp  SkShaper_harfbuzz.cpp  SkShaper_primitive.cpp
samplecode/: SampleParagraph.cpp  SampleTextBox.cpp
site/dev/design/: pdftheory.md
site/dev/testing/: automated_testing.md
site/user/: build.md  tips.md
site/user/api/: SkCanvas_Reference.md  SkImage_Reference.md  SkPath_Reference.md  SkRRect_Reference.md  SkRect_Reference.md  SkSurface_Reference.md  usingBookmaker.md
src/compute/hs/: README.md
src/gpu/: GrTessellator.cpp
src/utils/: SkLua.cpp
tests/: Paragraph.cpp  ParagraphBuilder.cpp  ParagraphTests.cpp  SkParagraphTest.cpp
tools/: using_skia_and_harfbuzz.cpp
tools/skqp/: README_ALGORITHM.md  README_GENERATING_MODELS.md
