# Copyright 2019 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  skia_enable_skparagraph = true
}

import("../../gn/skia.gni")

config("public_config") {
  if (skia_enable_skparagraph) {
    include_dirs = [
              "include",
              "src",
              "../shaper/include",
              "../../src/core",
              "../../include/private" ]
  }
}

source_set("skparagraph") {
  if (skia_enable_skparagraph) {
        import("skparagraph.gni")

    public_configs = [ ":public_config" ]
    public = skparagraph_public
    sources = skparagraph_sources
    deps = [
      "../..:skia",
    ]

    deps += [
      "//third_party/harfbuzz",
      "//third_party/icu",
      "../skshaper",
    ]
    configs += [ "../../:skia_private" ]
  }
}

