# Copyright 2018 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Things are easiest for everyone if these source paths are absolute.
_src = get_path_info("src", "abspath")
_include = get_path_info("include", "abspath")

skparagraph_public = [
            "$_include/SkParagraphStyle.h",
            "$_include/SkTextStyle.h",
            "$_include/flutter/SkFontCollection.h",
            "$_include/flutter/SkParagraph.h",
            "$_include/flutter/SkParagraphBuilder.h",
            "$_include/flutter/SkTextShadow.h",
            "$_include/flutter/SkDartTypes.h",
         ]

skparagraph_sources = [
            "$_src/SkShapedLine.h",
            "$_src/SkShapedParagraph.h",
            "$_src/SkShapedRun.h",

            "$_src/flutter/SkFontCollection.cpp",
            "$_src/flutter/SkParagraph.cpp",
            "$_src/flutter/SkParagraphBuilder.cpp",
            "$_src/flutter/SkParagraphStyle.cpp",
            "$_src/flutter/SkTextShadow.cpp",
            "$_src/flutter/SkTextStyle.cpp",
            "$_src/SkShapedParagraph.cpp",
            "$_src/SkShapedRun.cpp",
          ]
