# Copyright 2019 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Things are easiest for everyone if these source paths are absolute.
_src = get_path_info("src", "abspath")
_include = get_path_info("include", "abspath")

skparagraph_public = [
            "$_include/SkParagraphStyle.h",
            "$_include/SkTextStyle.h",
            "$_include/SkTextShadow.h",
            "$_include/SkFontCollection.h",
            "$_include/SkParagraph.h",
            "$_include/SkParagraphBuilder.h",
            "$_include/SkDartTypes.h",
         ]

skparagraph_sources = [
            "$_src/SkSection.h",
            "$_src/SkRun.h",
            "$_src/SkLine.h",
            "$_src/SkWord.h",

            "$_src/SkFontCollection.cpp",
            "$_src/SkParagraph.cpp",
            "$_src/SkParagraphBuilder.cpp",
            "$_src/SkTextShadow.cpp",
            "$_src/SkParagraphStyle.cpp",
            "$_src/SkTextStyle.cpp",
            "$_src/SkSection.cpp",
            "$_src/SkRun.cpp",
            "$_src/SkLine.cpp",
            "$_src/SkWord.cpp",
          ]
